# cambrian-s

./: .gitignore  README.md  fsdp_config.json  pyproject.toml
cambrian/: __init__.py  conversation.py  mm_utils.py  utils.py
cambrian/model/: __init__.py  builder.py  cambrian_arch.py
cambrian/model/language_model/: cambrian_qwen2.py
cambrian/model/multimodal_encoder/: base_encoder.py  builder.py  dino_encoder.py  llava_next_siglip_encoder.py  siglip_encoder.py
cambrian/train/: cambrian_trainer.py  shard_model.py  train_fsdp.py  train_spmd.py  train_tpu.py
lmms-eval/: .gitignore  README.md  demo.py  evaluate_all_in_one.sh  pyproject.toml  qwen2_monkey_patch.py
lmms-eval/lmms_eval/models/: __init__.py
lmms-eval/lmms_eval/models/simple/: cambrians.py  cambrians_vsc.py  cambrians_vsc_streaming.py  cambrians_vsr.py
lmms-eval/lmms_eval/tasks/cambrians_vsc/: cambrians_vsc_10mins.yaml  cambrians_vsc_30mins.yaml  utils.py
lmms-eval/lmms_eval/tasks/cambrians_vsc_streaming/: cambrians_vsc_streaming_10mins.yaml  cambrians_vsc_streaming_30mins.yaml  utils.py
lmms-eval/lmms_eval/tasks/cambrians_vsr/: cambrians_vsr_10mins.yaml  cambrians_vsr_120mins.yaml  cambrians_vsr_240mins.yaml  cambrians_vsr_30mins.yaml  cambrians_vsr_60mins.yaml  utils.py
lmms-eval/scripts/: vsc.sh  vsc_streaming.sh  vsr.sh
